Update development setup for Paper MC 1.21.1 and add debug mode
- Target `spigot-api:1.21.1-R0.1-SNAPSHOT` (covering Paper 1.21.11).
- Remove `BukkitUpdater` and `json-simple` dependency to stop auto-updates.
- Implement `/lagg debug [on/off]` command with persistent configuration.
- Add `Util.debug()` for togglable debug logging.
- Refactor deprecated `Class.newInstance()` to `Constructor.newInstance()`.

Co-authored-by: SjnExe <142050666+SjnExe@users.noreply.github.com>